2007-10-25  Pedro Alves  <pedro_alves@portugalmail.pt>

	* pe-dll.c (autofilter_symbollist_generic)
	(autofilter_symbollist_i386, autofilter_liblist)
	(autofilter_objlist, autofilter_symbolprefixlist)
	(autofilter_symbolsuffixlist): Don't use STRING_COMMA_LEN with
	NULL.

2007-10-24  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.in: Move AM_PROG_LIBTOOL after AC_GNU_SOURCE.
	* configure: Regenerated.

2007-10-24  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (INCLUDES): Remove -D_GNU_SOURCE.
	* configure.in: Invoke AC_GNU_SOURCE.
	* Makefile.in: Regenerate.
	* config.in: Regenerate.
	* configure: Regenerate.
	* po/POTFILES.in: Regenerate.

2007-10-19  Nick Clifton  <nickc@redhat.com>

	* configure.tgt: Add support for am34-linux-gnu target.

2007-10-17  Zack Weinberg  <zack@codesourcery.com>

	* ldlang.c (lang_check_section_addresses): Also report size of
	overflow for any overflowed memory regions.
	(os_region_check): Diagnose an overflowed region only once per
	region.  Do not reset region->current on overflow.

2007-10-04  Nick Clifton  <nickc@redhat.com>

	PR linker/4844
	* emultempl/pep.em (pep_find_data_imports): Issue a warning
	message if auto importing is triggered without
	--enable-auto-import having been specified on the command line.
	* emultempl/pe.em (pe_find_data_imports): Likewise.

	PR linker/5097
	* emultempl/armelf.em (arm_elf_finish): Fix spelling typo.

2007-10-01  Nick Clifton  <nickc@redhat.com>

	PR linker/4844
	* genscript.sh: Add support for generating a .xa script for use
	with the --auto-import option.
	* ld.texinfo: Document the new behaviour of the --auto-import
	option.
	* ldint.texinfo: Document new script generation.
	* emulparams/i386pe.sh (GENERATE_AUTO_IMPORT): Define.
	* emulparams/i386pe_posix.sh (GENERATE_AUTO_IMPORT): Define.
	* emulparams/i386pep.sh (GENERATE_AUTO_IMPORT): Define.
	* emultemp/pe.em (..._get_script): Support the use of the auto
	import script.